<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">Run Missions</string>

    <!-- Firebase ref -->
    <string name="firebase_ref">http://swrd.firebaseio.com/</string>
    <string name="login_type">password</string>

    <!-- Login/Signup -->
    <string name="email_placeholder">Email</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="confirm_password_placeholder">Confirm password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_message">Authenticating with services...</string>

    <!-- Main menu -->
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_chat">Chat</string>
    <string name="title_missions">Missions</string>
    <string name="title_instructions">Instructions</string>
    <string name="title_settings">Settings</string>

    <!-- Sub menu -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <!-- Accessibility -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="duck_image_desc">Rubber duckie</string>
    <string name="background_desc">Background image</string>

    <!-- Profile -->
    <string name="player_name">Name</string>
    <string name="player_level">Lvl</string>
    <string name="player_exp">Exp</string>
    <string name="player_missions">Missions</string>
    <string name="player_target">Target</string>
    <string name="text_color">#333333</string>
    <string name="level_up_dialog_title">Congratulations!!@#$!</string>
    <string name="level_up_dialog_message">You achieved level</string>

    <!-- Chat -->
    <string name="text_color_others">#333333</string>
    <string name="text_color_mine">#FF6600</string>

    <!-- Missions List -->
    <string name="title_mission_placeholder">Mission</string>
    <string name="desc_mission_placeholder">Now, this is the story all about how my life got flipped-turned upside down, and I\'d like to take a minute, just sit right there I\'ll tell you how I became the prince of a town called Bel Air</string>
    <string-array name="mission_titles">
        <item>Catastrophe</item>
        <item>Revolution</item>
    </string-array>
    <string-array name="mission_descriptions">
        <item>Mr. Parker and his friend Coco are trapped in a tree, a real catastrophe! Save the world as we know it from it\'s inevitable doom by rescuing two ambassadors of the Felinae race. Your device will provide the directions. Good luck!</item>
        <item>Join forces to overthrow the radical God-King of Earthsea. It is time to rise against the system, time for self-righteousness to rule. Run to the castle to take the law into your own hands. Your device will provide the directions. Good luck!</item>
    </string-array>

    <!-- Mission -->
    <string name="start_mission_button">START!</string>
    <string name="mission_timer_format">%s</string>

    <!-- Haptics -->
    <string name="haptic_lobby_title">Choose one of the two conditions.</string>
    <string name="haptic_condition_1">Condition 1</string>
    <string name="haptic_condition_2">Condition 2</string>
    <string name="haptic_condition_final">Final Set</string>
    <string name="haptic_set_final">Click here</string>
    <string name="haptic_intro">Intro</string>
    <string name="haptic_test">Test</string>
    <string name="haptic_test_thanks">Thank you for participating!</string>
    <string name="haptic_intro_back">Back to the lobby</string>
    <string name="start_haptic_test">Start Test</string>
    <string name="haptic_test_title">Tap on the buttons below to familiarize with haptic signals</string>
    <string name="haptic_button_left1">Left ( - . )</string>
    <string name="haptic_button_right1">Right ( . - )</string>
    <string name="haptic_button_sprint1">Sprint ( . . . )</string>
    <string name="haptic_button_error1">Wrong Direction ( - . - . - . - . - .)</string>
    <string name="haptic_button_closer1">Getting Closer( . . ...--- )</string>
    <string name="haptic_button_left2">Left ( . )</string>
    <string name="haptic_button_right2">Right ( . . )</string>
    <string name="haptic_button_sprint2">Sprint ( . . . )</string>
    <string name="haptic_button_error2">Wrong Direction ( . . . . )</string>
    <string name="haptic_button_closer2">Getting Closer( . . . . . )</string>
    <string name="haptic_button_left0">Left [ . ]</string>
    <string name="haptic_button_right0">Right [ . . ]</string>
    <string name="haptic_button_sprint0">Sprint [ . . . ]</string>
    <string name="haptic_button_error0">Wrong Direction [ - . - . - . ]</string>
    <string name="haptic_button_closer0">Getting Closer [ . . ...--- ]</string>

    <!--Settings-->
    <string name="label_distance">Preferred distance (km)</string>
    <string name="label_sprints">Number of sprints</string>
    <string name="label_feedback_rate">Feedback Rate (seconds)</string>

    <!-- Miscellaneous -->
    <string name="nav_drawer_background">#80FFFFFF</string>

</resources>
