<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:contentDescription="@string/duck_image_desc"
            android:src="@drawable/duck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="start"
            android:text="@string/player_level"
            android:textColor="@string/text_color"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/exp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="start"
            android:text="@string/player_exp"
            android:textColor="@string/text_color"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/missions"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="start"
            android:text="@string/player_missions"
            android:textColor="@string/text_color"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/player_name"
            android:textColor="@string/text_color"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</RelativeLayout>