<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.9">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_placeholder"
            android:inputType="textWebEmailAddress"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_button"/>
    </LinearLayout>

    <Button
        android:id="@+id/signup_link_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="right"
        android:text="@string/signup_button"
        android:layout_weight="0.1"/>


</LinearLayout>