<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_distance"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <SeekBar
            android:id="@+id/seekbarDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/max_distance" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:gravity="fill_horizontal"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_bright" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sprints"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <SeekBar
            android:id="@+id/seekbarSprints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/max_events" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:gravity="fill_horizontal"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_bright" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_feedback_rate"
            android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <SeekBar
            android:id="@+id/seekbarFeedbackRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/max_feedback_rate" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:gravity="fill_horizontal"
            android:scaleType="fitXY"
            android:src="@android:drawable/divider_horizontal_bright" />
    </LinearLayout>
</LinearLayout>